objects/BMCServiceDesk__SYSTabInfo__c.object
<CustomObject>
    <description>This object allows you to store data for tabs.</description>
    <fields>
        <fullName>BMCServiceDesk__Fkey__c</fullName>
        <label>Fkey</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__childObject__c</fullName>
        <label>Child Object</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__editLink__c</fullName>
        <label>Edit Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__formName__c</fullName>
        <label>Form Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__newEditLink__c</fullName>
        <label>New/Edit Link</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__parentObject__c</fullName>
        <label>Parent Object</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__tabName__c</fullName>
        <inlineHelpText>Label to be displayed on the field</inlineHelpText>
        <label>Tab Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__tabSequence__c</fullName>
        <label>TabSequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Tabs Info</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYSTabInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>